# fakultet-napredno-programiranje

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  init.py  project.code-workspace
backend/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  manage.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1768689308_2ecea7d78926_add_properties_table.py  1768768356_04acbcb5c06b_add_image_url_to_properties.py
backend/app/: app.py  main.py  routes.py
backend/app/celery/: celery_app.py  decorators.py  serializers.py
backend/app/celery/utils/: celery_di.py
backend/app/config/: misc.py  settings.py
backend/app/database/: __init__.py  base.py  enum.py  import_sqlalchemy_models.py  session_factory.py  session_handler.py
backend/app/properties/: router.py
backend/app/properties/models/: property.py
backend/app/properties/repositories/: __init__.py  property_repository.py
backend/app/properties/schemas/: __init__.py  property_schemas.py
backend/app/properties/services/: __init__.py  browser_pool.py  csv_export_service.py  estitor_scraper.py  property_parser.py  property_service.py  realitica_scraper.py
backend/app/properties/tasks/: scraper_tasks.py
backend/app/utils/: decorators.py  dependency_base.py  di.py  exceptions.py  files.py  pagination.py  random.py  schemas.py  search.py
backend/docker/: dev.Dockerfile  entrypoint.sh  prod.Dockerfile
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  knip.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  manager.ts  preview.ts
frontend/config/test/: unit-setup.ts
frontend/config/ts/: tsconfig.app.json  tsconfig.eslint.json  tsconfig.node.json
frontend/docker/: dev.Dockerfile
frontend/docs/: README.md
frontend/docs/architecture/: auth-permissions.md  data-flow.md  features.md  overview.md  project-structure.md  routing.md
frontend/docs/components/: composition-patterns.md  form.md  layout.md  ui.md
frontend/docs/conventions/: naming.md
frontend/docs/development/: code-standards.md  scripts.md  setup.md
frontend/docs/testing/: general.md
frontend/src/: app.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/api/hooks/: use-api-error.ts  use-query-error-handler.ts
frontend/src/api/types/: pagination.ts
frontend/src/components/form/: info-tooltip.tsx  label.tsx
frontend/src/components/ui/alert/: index.tsx
frontend/src/components/ui/avatar/: fallback.tsx  image.tsx  index.stories.tsx  index.tsx
frontend/src/components/ui/badge/: index.stories.tsx  index.tsx
frontend/src/components/ui/button/: index.stories.tsx  index.tsx
frontend/src/components/ui/calendar/: index.stories.tsx  index.tsx
frontend/src/components/ui/card/: action.tsx  content.tsx  description.tsx  footer.tsx  header.tsx  index.stories.tsx  index.tsx  title.tsx
frontend/src/components/ui/carousel/: carousel-arrow.tsx  carousel-content.tsx  carousel-context.ts  carousel-item.tsx  index.tsx
frontend/src/components/ui/checkbox/: indeterminate.tsx  index.stories.tsx  index.tsx
frontend/src/components/ui/collapsible/: content.tsx  index.stories.tsx  index.tsx  trigger.tsx
frontend/src/components/ui/coming-soon-card/: index.stories.tsx  index.tsx
frontend/src/components/ui/command/: index.stories.tsx  index.tsx
frontend/src/contexts/theme/: index.tsx
frontend/src/hooks/: use-effect-after-mount.ts  use-portal-scroll.ts  use-scroll-fade.ts
frontend/src/layouts/minimal/: index.tsx
frontend/src/pages/properties/: index.tsx
frontend/src/queries/: index.ts  properties.ts
frontend/src/queries/keys/: queries.ts
frontend/src/queries/types/: query.ts
frontend/src/router/: index.tsx
frontend/src/router/routes/: __root.tsx  index.ts
frontend/src/services/properties/: index.ts
frontend/src/styles/: index.css
frontend/src/utils/auth/: token.test.ts  token.ts
frontend/src/utils/css/: index.test.ts  index.ts
frontend/src/utils/file/: index.ts
frontend/src/utils/number/: index.ts
frontend/src/utils/string/: index.test.ts  index.ts
frontend/src/utils/user/: initials.ts
(+237 files in other folders)
